--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.17.1",
+    "firebase-admin": "^9.6.0",
     "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {},
